# bioluigi

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  README.md  example.luigi.cfg  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
bioluigi/: cli.py  config.py  cwl.py  local_target.py  scheduled_external_program.py  schedulers.py
bioluigi/tasks/: bcftools.py  cellranger.py  cutadapt.py  fastqc.py  gatk.py  multiqc.py  non_atomic.py  rsem.py  samtools.py  sratoolkit.py  star.py  utils.py  vep.py
docs/: cli.rst  conf.py  getting-started.rst  index.rst  requirements.txt  schedulers.rst
docs/api/: bioluigi.rst  bioluigi.tasks.rst  modules.rst
tests/: luigi.cfg  sacct-mock  sbatch-array-mock  sbatch-mock  squeue-mock  ssh-mock  test_bcftools.py  test_cellranger.py  test_cutadapt.py  test_cwl.py  test_local_target.py  test_multiqc.py  test_non_atomic_run_context.py  test_rsem.py  test_scheduled_external_program.py  test_sratoolkit.py  test_utils.py
